--- a/index.html
+++ b/index.html
@@ -5,5 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pesquisa Culturama</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Pesquisa Online</h1>
+    </header>
+    <section>
+      <form action="" method="get">
+        <fieldset>
+          <!-- Personal Data -->
+          <legend>Dados Pessoais</legend>
+          <label for="userName">Nome</label>
+          <input type="text" name="userName" required />
+
+          <label for="age">Idade</label>
+          <input type="number" name="age" min="12" max="100" required />
+
+          <label for="birthDate">Data de Nascimento</label>
+          <input type="date" name="birthDate" />
+
+          <label for="userEmail">E-mail</label>
+          <input type="email" name="userEmail" required />
+
+          <label for="userPhoneNumber">Telefone</label>
+          <input
+            type="tel"
+            name="userPhoneNumber"
+            pattern="[0-9]{11}"
+            placeholder="DDD + Número"
+          />
+
+          <label for="userImage">Upload de Foto</label>
+          <input type="file" accept="image/*" name="userImage" />
+        </fieldset>
+
+        <button type="submit">Enviar</button>
+      </form>
+    </section>
+  </body>
 </html>
