Add gender options

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </header>
     <section>
       <form action="" method="get">
-        <fieldset>
-          <!-- Personal Data -->
+        <!-- <fieldset>
+          Personal Data
           <legend>Dados Pessoais</legend>
           <label for="userName">Nome</label>
           <input type="text" name="userName" required />
@@ -36,8 +36,20 @@
 
           <label for="userImage">Upload de Foto</label>
           <input type="file" accept="image/*" name="userImage" />
-        </fieldset>
+        </fieldset> -->
 
+        <fieldset>
+          <legend>Perfil</legend>
+          <p>Gênero:</p>
+          <input type="radio" name="userGender" value="Feminino" />
+          <label for="userGender">Feminino</label>
+
+          <input type="radio" name="userGender" value="Masculino" />
+          <label for="userGender">Masculino</label>
+
+          <input type="radio" name="userGender" value="notInformed" />
+          <label for="userGender">Prefiro não informar</label>
+        </fieldset>
         <button type="submit">Enviar</button>
       </form>
     </section>
