--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 
           <input type="radio" name="userGender" value="notInformed" />
           <label for="userGender">Prefiro não informar</label>
+          <br />
+          <label for="maritalStatus">Estado Civil:</label>
+          <select name="maritalStatus" id="">
+            <option value="notInformed">Selecione</option>
+            <option value="casado">Casado</option>
+            <option value="solteiro">Solteiro</option>
+            <option value="Divorciado">Divorciado</option>
+          </select>
         </fieldset>
         <button type="submit">Enviar</button>
       </form>
