--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
           <label for="userImage">Upload de Foto</label>
           <input type="file" accept="image/*" name="userImage" />
-        </fieldset> -->
+        </fieldset> 
 
         <fieldset>
           <legend>Perfil</legend>
@@ -96,6 +96,21 @@
             autocomplete="address-level2"
             placeholder="Ex.: Fortaleza"
           />
+        </fieldset>-->
+        <fieldset>
+          <legend>Hábitos</legend>
+          <p>Redes Sociais:</p>
+          <input type="checkbox" name="social" value="instagram" />
+          <label for="social">Instagram</label>
+          <br />
+          <input type="checkbox" name="social" value="facebook" />
+          <label for="social">Facebook</label>
+          <br />
+          <input type="checkbox" name="social" value="linkedIn" />
+          <label for="social">LinkedIn</label>
+          <br />
+          <input type="checkbox" name="social" value="x" />
+          <label for="social">X</label>
         </fieldset>
         <button type="submit">Enviar</button>
       </form>
