--- a/index.html
+++ b/index.html
@@ -131,6 +131,22 @@
           <br />
           <input id="x" type="checkbox" name="social" value="x" />
           <label for="x">X</label>
+          <br />
+
+          <label for="musicStyle">Estilo Musical:</label>
+          <input
+            list="styleTypes"
+            id="musicStyle"
+            name="userMusicStyle"
+            type="text"
+          />
+          <datalist id="styleTypes">
+            <option value="Rock"></option>
+            <option value="Pop"></option>
+            <option value="Samba"></option>
+            <option value="Sertanejo"></option>
+            <option value="MPB"></option>
+          </datalist>
         </fieldset>
         <button type="submit">Enviar</button>
       </form>
