--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <fieldset>
           <!-- Personal Data -->
           <legend>Dados Pessoais</legend>
-          <label for="name">Nome</label>
+          <label for="name">Nome:</label>
           <input id="name" name="userName" required />
           <br />
-          <label for="age">Idade</label>
+          <label for="age">Idade:</label>
           <input
             id="age"
             type="number"
@@ -27,13 +27,13 @@
             required
           />
           <br />
-          <label for="birthDate">Data de Nascimento</label>
+          <label for="birthDate">Data de Nascimento:</label>
           <input id="birthDate" type="date" name="userBirthDate" />
           <br />
-          <label for="email">E-mail</label>
+          <label for="email">E-mail:</label>
           <input id="email" type="email" name="userEmail" required />
           <br />
-          <label for="phoneNumber">Telefone</label>
+          <label for="phoneNumber">Telefone:</label>
           <input
             id="phoneNumber"
             type="tel"
@@ -42,7 +42,7 @@
             placeholder="DDD + Número"
           />
           <br />
-          <label for="image">Upload de Foto</label>
+          <label for="image">Upload de Foto:</label>
           <input id="image" type="file" accept="image/*" name="userImage" />
         </fieldset>
 
@@ -147,6 +147,9 @@
             <option value="Sertanejo"></option>
             <option value="MPB"></option>
           </datalist>
+          <br />
+          <label for="favoriteColor">Cor Favorita:</label>
+          <input type="color" name="userFavoriteColor" id="favoriteColor" />
         </fieldset>
         <button type="submit">Enviar</button>
       </form>
