--- a/index.html
+++ b/index.html
@@ -188,6 +188,29 @@
           <label for="comment">Escreva a sua opinião:</label>
           <textarea name="userComment" id="comment"></textarea>
         </fieldset>
+
+        <fieldset>
+          <legend>Confirmações</legend>
+          <input
+            id="userLgpdTerm"
+            type="checkbox"
+            name="userLgpd"
+            value="accepted"
+            required
+          />
+          <label for="userLgpdTerm">Eu aceito participar da pesquisa</label
+          ><br />
+
+          <input
+            id="getResult"
+            type="checkbox"
+            name="userGetResult"
+            value="accepted"
+            required
+          />
+          <label for="getResult">Desejo receber o resultado por e-mail</label
+          ><br />
+        </fieldset>
         <button type="submit">Enviar</button>
       </form>
     </section>
