--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
           ><br />
         </fieldset>
         <button type="submit">Enviar</button>
+        <button type="reset">Limpar</button>
       </form>
     </section>
   </body>
