--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/culturama-favicon.png" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,215 +14,227 @@
     <title>Pesquisa Culturama</title>
   </head>
   <body>
-    <header>
-      <img src="img/logo-culturama.png" alt="Logo Culturama" />
-      <h1>Pesquisa Online</h1>
-    </header>
-    <section>
-      <form action="" method="get">
-        <fieldset>
-          <!-- Personal Data -->
-          <legend>Dados Pessoais</legend>
-          <label for="name">Nome:</label>
-          <input id="name" name="userName" required />
-          <br />
-          <label for="age">Idade:</label>
-          <input
-            id="age"
-            type="number"
-            name="userAge"
-            min="12"
-            max="100"
-            required
-          />
-          <br />
-          <label for="birthDate">Data de Nascimento:</label>
-          <input id="birthDate" type="date" name="userBirthDate" />
-          <br />
-          <label for="email">E-mail:</label>
-          <input id="email" type="email" name="userEmail" required />
-          <br />
-          <label for="phoneNumber">Telefone:</label>
-          <input
-            id="phoneNumber"
-            type="tel"
-            name="userPhoneNumber"
-            pattern="[0-9]{11}"
-            placeholder="DDD + Número"
-          />
-          <br />
-          <label for="image">Upload de Foto:</label>
-          <input id="image" type="file" accept="image/*" name="userImage" />
-        </fieldset>
+    <main>
+      <header>
+        <img src="img/logo-culturama.png" alt="Logo Culturama" />
+        <h1>Pesquisa Online</h1>
+      </header>
+      <section>
+        <form action="" method="get">
+          <fieldset>
+            <!-- Personal Data -->
+            <legend>Dados Pessoais</legend>
+            <label for="name">Nome:</label>
+            <input id="name" name="userName" required />
+            <br />
+            <label for="age">Idade:</label>
+            <input
+              id="age"
+              type="number"
+              name="userAge"
+              min="12"
+              max="100"
+              required
+            />
+            <br />
+            <label for="birthDate">Data de Nascimento:</label>
+            <input id="birthDate" type="date" name="userBirthDate" />
+            <br />
+            <label for="email">E-mail:</label>
+            <input id="email" type="email" name="userEmail" required />
+            <br />
+            <label for="phoneNumber">Telefone:</label>
+            <input
+              id="phoneNumber"
+              type="tel"
+              name="userPhoneNumber"
+              pattern="[0-9]{11}"
+              placeholder="DDD + Número"
+            />
+            <br />
+            <label for="image">Upload de Foto:</label>
+            <input id="image" type="file" accept="image/*" name="userImage" />
+          </fieldset>
 
-        <fieldset>
-          <legend>Perfil</legend>
-          <p>Gênero:</p>
-          <input id="fem" type="radio" name="userGender" value="Feminino" />
-          <label for="fem">Feminino</label>
+          <fieldset>
+            <legend>Perfil</legend>
+            <p>Gênero:</p>
+            <input id="fem" type="radio" name="userGender" value="Feminino" />
+            <label for="fem">Feminino</label>
 
-          <input id="masc" type="radio" name="userGender" value="Masculino" />
-          <label for="masc">Masculino</label>
+            <input id="masc" type="radio" name="userGender" value="Masculino" />
+            <label for="masc">Masculino</label>
 
-          <input
-            id="notInformed"
-            type="radio"
-            name="userGender"
-            value="notInformed"
-          />
-          <label for="notInformed">Prefiro não informar</label>
-          <br />
-          <label for="maritalStatus">Estado Civil:</label>
-          <select id="maritalStatus" name="userMaritalStatus">
-            <option value="notInformed">Selecione</option>
-            <option value="casado">Casado</option>
-            <option value="solteiro">Solteiro</option>
-            <option value="Divorciado">Divorciado</option>
-          </select>
-          <br />
-          <label for="state">Estado:</label>
-          <select id="state" name="userState" required>
-            <option value="notInformed">Selecione</option>
-            <option value="acre">Acre</option>
-            <option value="alagoas">Alagoas</option>
-            <option value="amapa">Amapá</option>
-            <option value="amazonas">Amazonas</option>
-            <option value="bahia">Bahia</option>
-            <option value="ceara">Ceará</option>
-            <option value="distritoFederal">Distrito Federal</option>
-            <option value="espiritoSanto">Espírito Santo</option>
-            <option value="goias">Goiás</option>
-            <option value="matoGrossoDoSul">Mato Grosso do Sul</option>
-            <option value="matoGrosso">Mato Grosso</option>
-            <option value="minasGerais">Minas Gerais</option>
-            <option value="para">Pará</option>
-            <option value="paraiba">Paraíba</option>
-            <option value="parana">Paraná</option>
-            <option value="pernambuco">Pernambuco</option>
-            <option value="piaui">Piauí</option>
-            <option value="rioDeJaneiro">Rio de Janeiro</option>
-            <option value="rioGrandeDoNorte">Rio Grande do Norte</option>
-            <option value="rioGrandeDoSul">Rio Grande do Sul</option>
-            <option value="rondonia">Rondônia</option>
-            <option value="roraima">Roraima</option>
-            <option value="santaCatarina">Santa Catarina</option>
-            <option value="saoPaulo">São Paulo</option>
-            <option value="sergipe">Sergipe</option>
-            <option value="tocantins">Tocantins</option>
-          </select>
-          <br />
-          <label for="city">Cidade:</label>
-          <input
-            id="city"
-            type="text"
-            id="userCity"
-            name="userCity"
-            autocomplete="address-level2"
-            placeholder="Ex.: Fortaleza"
-          />
-        </fieldset>
-        <fieldset>
-          <legend>Hábitos</legend>
-          <p>Redes Sociais:</p>
-          <input
-            id="instagram"
-            type="checkbox"
-            name="social"
-            value="instagram"
-          />
-          <label for="instagram">Instagram</label>
-          <br />
-          <input id="facebook" type="checkbox" name="social" value="facebook" />
-          <label for="facebook">Facebook</label>
-          <br />
-          <input id="linkedIn" type="checkbox" name="social" value="linkedIn" />
-          <label for="linkedIn">LinkedIn</label>
-          <br />
-          <input id="x" type="checkbox" name="social" value="x" />
-          <label for="x">X</label>
-          <br />
+            <input
+              id="notInformed"
+              type="radio"
+              name="userGender"
+              value="notInformed"
+            />
+            <label for="notInformed">Prefiro não informar</label>
+            <br />
+            <label for="maritalStatus">Estado Civil:</label>
+            <select id="maritalStatus" name="userMaritalStatus">
+              <option value="notInformed">Selecione</option>
+              <option value="casado">Casado</option>
+              <option value="solteiro">Solteiro</option>
+              <option value="Divorciado">Divorciado</option>
+            </select>
+            <br />
+            <label for="state">Estado:</label>
+            <select id="state" name="userState" required>
+              <option value="notInformed">Selecione</option>
+              <option value="acre">Acre</option>
+              <option value="alagoas">Alagoas</option>
+              <option value="amapa">Amapá</option>
+              <option value="amazonas">Amazonas</option>
+              <option value="bahia">Bahia</option>
+              <option value="ceara">Ceará</option>
+              <option value="distritoFederal">Distrito Federal</option>
+              <option value="espiritoSanto">Espírito Santo</option>
+              <option value="goias">Goiás</option>
+              <option value="matoGrossoDoSul">Mato Grosso do Sul</option>
+              <option value="matoGrosso">Mato Grosso</option>
+              <option value="minasGerais">Minas Gerais</option>
+              <option value="para">Pará</option>
+              <option value="paraiba">Paraíba</option>
+              <option value="parana">Paraná</option>
+              <option value="pernambuco">Pernambuco</option>
+              <option value="piaui">Piauí</option>
+              <option value="rioDeJaneiro">Rio de Janeiro</option>
+              <option value="rioGrandeDoNorte">Rio Grande do Norte</option>
+              <option value="rioGrandeDoSul">Rio Grande do Sul</option>
+              <option value="rondonia">Rondônia</option>
+              <option value="roraima">Roraima</option>
+              <option value="santaCatarina">Santa Catarina</option>
+              <option value="saoPaulo">São Paulo</option>
+              <option value="sergipe">Sergipe</option>
+              <option value="tocantins">Tocantins</option>
+            </select>
+            <br />
+            <label for="city">Cidade:</label>
+            <input
+              id="city"
+              type="text"
+              id="userCity"
+              name="userCity"
+              autocomplete="address-level2"
+              placeholder="Ex.: Fortaleza"
+            />
+          </fieldset>
+          <fieldset>
+            <legend>Hábitos</legend>
+            <p>Redes Sociais:</p>
+            <input
+              id="instagram"
+              type="checkbox"
+              name="social"
+              value="instagram"
+            />
+            <label for="instagram">Instagram</label>
+            <br />
+            <input
+              id="facebook"
+              type="checkbox"
+              name="social"
+              value="facebook"
+            />
+            <label for="facebook">Facebook</label>
+            <br />
+            <input
+              id="linkedIn"
+              type="checkbox"
+              name="social"
+              value="linkedIn"
+            />
+            <label for="linkedIn">LinkedIn</label>
+            <br />
+            <input id="x" type="checkbox" name="social" value="x" />
+            <label for="x">X</label>
+            <br />
 
-          <label for="musicStyle">Estilo Musical:</label>
-          <input
-            list="styleTypes"
-            id="musicStyle"
-            name="userMusicStyle"
-            type="text"
-          />
-          <datalist id="styleTypes">
-            <option value="Rock"></option>
-            <option value="Pop"></option>
-            <option value="Samba"></option>
-            <option value="Sertanejo"></option>
-            <option value="MPB"></option>
-          </datalist>
-          <br />
-          <label for="favoriteColor">Cor Favorita:</label>
-          <input type="color" name="userFavoriteColor" id="favoriteColor" />
-        </fieldset>
+            <label for="musicStyle">Estilo Musical:</label>
+            <input
+              list="styleTypes"
+              id="musicStyle"
+              name="userMusicStyle"
+              type="text"
+            />
+            <datalist id="styleTypes">
+              <option value="Rock"></option>
+              <option value="Pop"></option>
+              <option value="Samba"></option>
+              <option value="Sertanejo"></option>
+              <option value="MPB"></option>
+            </datalist>
+            <br />
+            <label for="favoriteColor">Cor Favorita:</label>
+            <input type="color" name="userFavoriteColor" id="favoriteColor" />
+          </fieldset>
 
-        <fieldset>
-          <legend>Opiniões</legend>
-          <p>O que você acha da qualidade do nosso serviço?</p>
+          <fieldset>
+            <legend>Opiniões</legend>
+            <p>O que você acha da qualidade do nosso serviço?</p>
 
-          <input
-            id="great"
-            type="radio"
-            name="userSatisfaction"
-            value="Ótima"
-          />
-          <label for="great">Ótima</label><br />
+            <input
+              id="great"
+              type="radio"
+              name="userSatisfaction"
+              value="Ótima"
+            />
+            <label for="great">Ótima</label><br />
 
-          <input id="good" type="radio" name="userSatisfaction" value="Boa" />
-          <label for="good">Boa</label><br />
+            <input id="good" type="radio" name="userSatisfaction" value="Boa" />
+            <label for="good">Boa</label><br />
 
-          <input
-            id="average"
-            type="radio"
-            name="userSatisfaction"
-            value="Regular"
-          />
-          <label for="average">Regular</label><br />
+            <input
+              id="average"
+              type="radio"
+              name="userSatisfaction"
+              value="Regular"
+            />
+            <label for="average">Regular</label><br />
 
-          <input
-            id="poor"
-            type="radio"
-            name="userSatisfaction"
-            placeholder="Digite aqui sua opinião..."
-            value="Ruim"
-          />
-          <label for="poor">Ruim</label>
+            <input
+              id="poor"
+              type="radio"
+              name="userSatisfaction"
+              placeholder="Digite aqui sua opinião..."
+              value="Ruim"
+            />
+            <label for="poor">Ruim</label>
 
-          <br />
-          <label for="comment">Escreva a sua opinião:</label>
-          <textarea name="userComment" id="comment"></textarea>
-        </fieldset>
+            <br />
+            <label for="comment">Escreva a sua opinião:</label>
+            <textarea name="userComment" id="comment"></textarea>
+          </fieldset>
 
-        <fieldset>
-          <legend>Confirmações</legend>
-          <input
-            id="userLgpdTerm"
-            type="checkbox"
-            name="userLgpd"
-            value="accepted"
-            required
-          />
-          <label for="userLgpdTerm">Eu aceito participar da pesquisa</label
-          ><br />
+          <fieldset>
+            <legend>Confirmações</legend>
+            <input
+              id="userLgpdTerm"
+              type="checkbox"
+              name="userLgpd"
+              value="accepted"
+              required
+            />
+            <label for="userLgpdTerm">Eu aceito participar da pesquisa</label
+            ><br />
 
-          <input
-            id="getResult"
-            type="checkbox"
-            name="userGetResult"
-            value="accepted"
-            required
-          />
-          <label for="getResult">Desejo receber o resultado por e-mail</label
-          ><br />
-        </fieldset>
-        <button type="submit">Enviar</button>
-        <button type="reset">Limpar</button>
-      </form>
-    </section>
+            <input
+              id="getResult"
+              type="checkbox"
+              name="userGetResult"
+              value="accepted"
+              required
+            />
+            <label for="getResult">Desejo receber o resultado por e-mail</label
+            ><br />
+          </fieldset>
+          <button type="submit">Enviar</button>
+          <button type="reset">Limpar</button>
+        </form>
+      </section>
+    </main>
   </body>
 </html>
