Fix: Add missing type='text' on name field

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- Personal Data -->
             <legend>Dados Pessoais</legend>
             <label for="name">Nome:</label>
-            <input id="name" name="userName" required />
+            <input type="text" id="name" name="userName" required />
             <br />
             <label for="age">Idade:</label>
             <input
