Configuration of the form action to redirect to the success.html page

--- a/success.html
+++ b/success.html
@@ -13,5 +13,7 @@
     />
     <title>Pesquisa Culturama</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Dados enviados com sucesso!</h1>
+  </body>
 </html>
