--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Pesquisa de Opinião</h1>
       </header>
       <section>
-        <form action="" method="get">
+        <form action="success.html" method="get">
           <fieldset>
             <!-- Personal Data -->
             <legend>Dados Pessoais</legend>
