--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
               name="userPhoneNumber"
               pattern="[0-9]{11}"
               placeholder="DDD + Número"
+              aria-describedby="phoneHelp"
             />
+            <small id="phoneHelp"
+              >Preencha com 11 dígitos no formato: DDD + Número sem espaços ou
+              hífen.</small
+            >
             <br />
             <label for="image">Upload de Foto:</label>
             <input id="image" type="file" accept="image/*" name="userImage" />
