--- a/index.html
+++ b/index.html
@@ -58,7 +58,14 @@
             >
             <br />
             <label for="image">Upload de Foto:</label>
-            <input id="image" type="file" accept="image/*" name="userImage" />
+            <input
+              id="image"
+              type="file"
+              accept="image/*"
+              name="userImage"
+              aria-describedby="imageHelp"
+            />
+            <small id="imageHelp">Envie uma foto no formato PNG ou JPEG.</small>
           </fieldset>
 
           <fieldset>
@@ -236,8 +243,12 @@
             <label for="getResult">Desejo receber o resultado por e-mail</label
             ><br />
           </fieldset>
-          <button type="submit">Enviar</button>
-          <button type="reset">Limpar</button>
+          <button type="submit" aria-label="Enviar dados do formulário">
+            Enviar
+          </button>
+          <button type="reset" aria-label="Limpar dados do formulário">
+            Limpar
+          </button>
         </form>
       </section>
     </main>
